// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`async-do-expressions.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
async do {
  1;
};

(async do {});

let x = async do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

async do {
  await 42
}

let x = async do {
  let tmp = f();
  tmp * tmp + 1
};

=====================================output=====================================
(async do {
  1;
});

(async do {});

let x = async do {
  if (foo()) {
    f();
  } else if (bar()) {
    g();
  } else {
    h();
  }
};

(async do {
  await 42;
});

let x = async do {
  let tmp = f();
  tmp * tmp + 1;
};

================================================================================
`;

exports[`async-do-expressions.js format[acorn] 1`] = `
"Unexpected token (1:7)
> 1 | async do {
    |       ^
  2 |   1;
  3 | };
  4 |
Cause: Unexpected token (1:6)"
`;

exports[`async-do-expressions.js format[espree] 1`] = `
"Unexpected token do (1:7)
> 1 | async do {
    |       ^
  2 |   1;
  3 | };
  4 |
Cause: Unexpected token do"
`;

exports[`async-do-expressions.js format[meriyah] 1`] = `
"Unexpected token: 'do' (1:7)
> 1 | async do {
    |       ^^
  2 |   1;
  3 | };
  4 |
Cause: [1:6-1:8]: Unexpected token: 'do'"
`;

exports[`async-do-expressions.js format[oxc] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found none (1:6)
> 1 | async do {
    |      ^
  2 |   1;
  3 | };
  4 |"
`;

exports[`async-do-expressions.js format[yuku] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found 'do' (1:7)
> 1 | async do {
    |       ^^
  2 |   1;
  3 | };
  4 |"
`;

exports[`call-arguments.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// from https://github.com/babel/babel/pull/13122/
expect(
  do {
    var bar = "foo";
    if (!bar) throw new Error(
      "unreachable"
    )
    bar;
  }
).toBe("foo");
expect(bar).toBe("foo");

var x = do {
  var bar = "foo";
  if (!bar) throw new Error(
    "unreachable"
  )
  bar;
};

expect(
  do {
    var bar = "foo";
    bar;
  }
).toBe("foo");
expect(bar).toBe("foo");

var x = do {
  var bar = "foo";
  bar;
};

expect(
  () => do {
    () => {
      var bar = "foo";
    };
    bar;
  }
).toThrow(ReferenceError);

=====================================output=====================================
// from https://github.com/babel/babel/pull/13122/
expect(do {
  var bar = "foo";
  if (!bar) throw new Error("unreachable");
  bar;
}).toBe("foo");
expect(bar).toBe("foo");

var x = do {
  var bar = "foo";
  if (!bar) throw new Error("unreachable");
  bar;
};

expect(do {
  var bar = "foo";
  bar;
}).toBe("foo");
expect(bar).toBe("foo");

var x = do {
  var bar = "foo";
  bar;
};

expect(
  () => do {
    () => {
      var bar = "foo";
    };
    bar;
  },
).toThrow(ReferenceError);

================================================================================
`;

exports[`call-arguments.js format[acorn] 1`] = `
"Unexpected token (3:3)
  1 | // from https://github.com/babel/babel/pull/13122/
  2 | expect(
> 3 |   do {
    |   ^
  4 |     var bar = "foo";
  5 |     if (!bar) throw new Error(
  6 |       "unreachable"
Cause: Unexpected token (3:2)"
`;

exports[`call-arguments.js format[espree] 1`] = `
"Unexpected token do (3:3)
  1 | // from https://github.com/babel/babel/pull/13122/
  2 | expect(
> 3 |   do {
    |   ^
  4 |     var bar = "foo";
  5 |     if (!bar) throw new Error(
  6 |       "unreachable"
Cause: Unexpected token do"
`;

exports[`call-arguments.js format[meriyah] 1`] = `
"Unexpected token: 'do' (3:3)
  1 | // from https://github.com/babel/babel/pull/13122/
  2 | expect(
> 3 |   do {
    |   ^^
  4 |     var bar = "foo";
  5 |     if (!bar) throw new Error(
  6 |       "unreachable"
Cause: [3:2-3:4]: Unexpected token: 'do'"
`;

exports[`call-arguments.js format[oxc] 1`] = `
"Unexpected token (3:3)
  1 | // from https://github.com/babel/babel/pull/13122/
  2 | expect(
> 3 |   do {
    |   ^^
  4 |     var bar = "foo";
  5 |     if (!bar) throw new Error(
  6 |       "unreachable""
`;

exports[`call-arguments.js format[yuku] 1`] = `
"'do' is reserved and cannot be used as an identifier (3:3)
  1 | // from https://github.com/babel/babel/pull/13122/
  2 | expect(
> 3 |   do {
    |   ^^
  4 |     var bar = "foo";
  5 |     if (!bar) throw new Error(
  6 |       "unreachable""
`;

exports[`do-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const envSpecific = {
  domain:
    do {
      if(env === 'production') 'https://abc.mno.com/';
      else if(env === 'development') 'http://localhost:4000';
    }
};

let x = do {
  let tmp = f();
  tmp * tmp + 1
};

let y = do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

function foo() {
  return (
    <nav>
      <Home />
      {
        do {
          if (loggedIn) {
            <LogoutButton />
          } else {
            <LoginButton />
          }
        }
      }
    </nav>
  );
}

(do {});
(do {} + 1);
(1 + do {});
() => do {};

(do {
  switch(0) {
    case 0: "foo";
    case 1: break;
  }
});

() => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

() => (    ) => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

a =>b=>     c => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

=====================================output=====================================
const envSpecific = {
  domain: do {
    if (env === "production") "https://abc.mno.com/";
    else if (env === "development") "http://localhost:4000";
  },
};

let x = do {
  let tmp = f();
  tmp * tmp + 1;
};

let y = do {
  if (foo()) {
    f();
  } else if (bar()) {
    g();
  } else {
    h();
  }
};

function foo() {
  return (
    <nav>
      <Home />
      {do {
        if (loggedIn) {
          <LogoutButton />;
        } else {
          <LoginButton />;
        }
      }}
    </nav>
  );
}

(do {});
(do {}) + 1;
1 + do {};
() => do {};

(do {
  switch (0) {
    case 0:
      "foo";
    case 1:
      break;
  }
});

() => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

() => () => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

(a) => (b) => (c) => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};

================================================================================
`;

exports[`do-expression.js format[acorn] 1`] = `
"Unexpected token (3:5)
  1 | const envSpecific = {
  2 |   domain:
> 3 |     do {
    |     ^
  4 |       if(env === 'production') 'https://abc.mno.com/';
  5 |       else if(env === 'development') 'http://localhost:4000';
  6 |     }
Cause: Unexpected token (3:4)"
`;

exports[`do-expression.js format[espree] 1`] = `
"Unexpected token do (3:5)
  1 | const envSpecific = {
  2 |   domain:
> 3 |     do {
    |     ^
  4 |       if(env === 'production') 'https://abc.mno.com/';
  5 |       else if(env === 'development') 'http://localhost:4000';
  6 |     }
Cause: Unexpected token do"
`;

exports[`do-expression.js format[meriyah] 1`] = `
"Unexpected token: 'do' (3:5)
  1 | const envSpecific = {
  2 |   domain:
> 3 |     do {
    |     ^^
  4 |       if(env === 'production') 'https://abc.mno.com/';
  5 |       else if(env === 'development') 'http://localhost:4000';
  6 |     }
Cause: [3:4-3:6]: Unexpected token: 'do'"
`;

exports[`do-expression.js format[oxc] 1`] = `
"Unexpected token (3:5)
  1 | const envSpecific = {
  2 |   domain:
> 3 |     do {
    |     ^^
  4 |       if(env === 'production') 'https://abc.mno.com/';
  5 |       else if(env === 'development') 'http://localhost:4000';
  6 |     }"
`;

exports[`do-expression.js format[yuku] 1`] = `
"'do' is reserved and cannot be used as an identifier (3:5)
  1 | const envSpecific = {
  2 |   domain:
> 3 |     do {
    |     ^^
  4 |       if(env === 'production') 'https://abc.mno.com/';
  5 |       else if(env === 'development') 'http://localhost:4000';
  6 |     }"
`;
